made changes to fix flipping album covers and appearance

--- a/app/stylesheets/_landing.scss
+++ b/app/stylesheets/_landing.scss
@@ -16,9 +16,9 @@ $bg-color: #2F1D57;
     padding: 100px 0;
 
     .point {
-        width: 32%;
+        width: 33.3%;
         float: left;
-        padding: 0 0.5%;
+        padding: 0 2%;
 
         h5 {
             font-size: 24px;
@@ -33,3 +33,56 @@ $bg-color: #2F1D57;
         }
     }  /*.point */
 } /* .selling-points */
+
+div.selling-points div.row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+div.point p {
+    margin-left: 10px;
+}
+.album-back-cover {
+    text-align: center;
+    padding-top: 20px;
+}
+.flip-container {
+    perspective: 1000;
+} /* used with flipping album cover */
+
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+    width: 400px;
+    height: 400px;
+}
+
+/* flip speed goes here */
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+
+    position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+    backface-visibility: hidden;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
+    background-color: #ccc;
+}
