--- a/app/stylesheets/mobile.scss
+++ b/app/stylesheets/mobile.scss
@@ -41,5 +41,6 @@
     margin-left: auto;
     margin-right: auto;
     width: 280px; /* Width of the album image. */
+    height: 280px;
   }
 }
